<resources>
    <string name="app_name">Neutrophil</string>
    <string name="textTitle">A Neutrophil\'s Journey</string>
    <string name="PauseTittle">Pause</string>
    <string name="SettingsTittle">Settings</string>
    <string name="LoadTittle">Load Game</string>
    <string name="InventoryTittle">Inventory</string>
    <string name="SaveTittle">Save Game</string>
    <string name="Close">Close</string>
    <string name="creditsTittle">Credits</string>
    <string name="NewTittle">New Game</string>
    <string name="resume">Resume</string>
    <string name="music">Music</string>
    <string name="sounds">Sounds</string>
    <string name="MadeBy">Made by Matthew Grierson</string>
    <string name="newGameWarning">You are starting a new game to save this game you will overwrite any previously started games.</string>
    <string name="pauseButton">PauseButton</string>
    <string name="playerHealth">Health</string>
    <string name="leftArrow">LeftArrow</string>
    <string name="rightArrow">RightArrow</string>
    <string name="downArrow">DownArrow</string>
    <string name="upArrow">UpArrow</string>
    <string name="rollDice">Roll Dice</string>
    <string name="movesLeft">Moves Left</string>
    <string name="map">map</string>
    <string name="inventory">inventory</string>
    <string name="retreat">retreat</string>
    <string name="background">background</string>
    <string name="attacks">Attacks</string>
    <string name="items">Items</string>
    <string name="neutrophil">Neutrophil</string>
    <string name="savedPlayer">savedPlayer</string>
    <string name="gameView">game view</string>
    <string name="savedEnemies">savedEnemies</string>
    <string name="savedEnemy">savedEnemy</string>
    <string name="savedTiles">savedTiles</string>
    <string name="savedTile">savedTile</string>
    <string name="enemyImage">enemyImage</string>
    <string name="savedLoop">savedLoop</string>
    <string name="savedAbility">savedAbility</string>
    <string name="savedMusic">savedMusic</string>
    <string name="savedSounds">savedSounds</string>
    <string name="GameOver">Game Over</string>
    <string name="playerImage">playerImage</string>
    <string name="MusicBy">Music by Dylan Senderling</string>
    <string name="healthButton">healthButton</string>
    <string name="savedItems">savedItems</string>
    <string name="savedItem">savedItem</string>
    <string name="enemySpritesMadeBy">Art by Vector Tradition</string>
    <string name="otherEnemySpritesBy">Art by ChiliGames</string>
    <string name="playerSpritesBy">Art by Cthoman</string>
    <string name="savedLevelManager">savedLevelManager</string>
    <string name="Attack">To do damage to the enemy you can draw a circle in the box above.</string>
    <string name="AttackParasite">To do extra damage to the enemy draw a upside Down Triangle in the box above.</string>
    <string name="AttackVirus">To do extra damage to the enemy draw a lightning bolt in the box above.</string>
    <string name="AttackBacteria">To do extra damage to the enemy draw a fish in the box above.</string>
    <string name="AttackFungus">To do extra damage to the enemy draw a swirl in the box above.</string>
</resources>