<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/OverWorld"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="horizontal"
    tools:context="com.example.neutrophil.game.OverWorld">

    <com.example.neutrophil.game.OverWorldView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/pauseButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/pauseButton"
        android:src="@android:drawable/ic_media_pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/healthBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="50"
        android:scaleY="3"
        app:layout_constraintStart_toEndOf="@+id/healthText"
        app:layout_constraintTop_toTopOf="parent"
        android:progressTint="#C21807"/>

    <TextView
        android:id="@+id/healthValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/healthBar"
        app:layout_constraintEnd_toEndOf="@+id/healthBar"
        app:layout_constraintStart_toStartOf="@+id/healthBar"
        app:layout_constraintTop_toTopOf="@+id/healthBar"
        tools:text="100/100" />

    <TextView
        android:id="@+id/healthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/playerHealth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/upArrow"
        android:layout_width="40dp"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/upArrow"
        android:src="@drawable/arrow_up"
        app:layout_constraintBottom_toTopOf="@+id/downArrow"
        app:layout_constraintStart_toEndOf="@+id/leftArrow" />

    <ImageView
        android:id="@+id/downArrow"
        android:layout_width="40dp"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/downArrow"
        android:src="@drawable/arrow_down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/leftArrow" />

    <ImageView
        android:id="@+id/leftArrow"
        android:layout_width="55dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/leftArrow"
        android:src="@drawable/arrow_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/rightArrow"
        android:layout_width="55dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/rightArrow"
        android:src="@drawable/arrow_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/downArrow" />

    <Button
        android:id="@+id/diceRoll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="30dp"
        android:text="@string/rollDice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rightArrow" />

    <TextView
        android:id="@+id/moveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="10dp"
        android:text="@string/movesLeft"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/downArrow" />

    <TextView
        android:id="@+id/numMoves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="#020202"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/moveText"
        app:layout_constraintEnd_toStartOf="@+id/diceRoll"
        app:layout_constraintStart_toEndOf="@+id/rightArrow"
        tools:text="16" />

    <ImageButton
        android:id="@+id/mapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/map"
        android:src="@android:drawable/ic_menu_mapmode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/inventoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/inventory"
        android:src="@android:drawable/ic_dialog_dialer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mapButton" />

</androidx.constraintlayout.widget.ConstraintLayout>