<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".game.Death">

    <Button
        android:id="@+id/newGame"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="20dp"
        android:background="#673AB7"
        android:text="@string/NewTittle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/settings"
        app:layout_constraintStart_toEndOf="@+id/credits"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settings"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:background="#8BC34A"
        android:text="@string/SettingsTittle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/newGame"
        app:layout_constraintTop_toBottomOf="@+id/close" />

    <Button
        android:id="@+id/credits"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="320dp"
        android:layout_marginBottom="20dp"
        android:background="#F44336"
        android:text="@string/creditsTittle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/newGame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="#FF9800"
        android:text="@string/Close"
        app:layout_constraintBottom_toTopOf="@+id/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/GameOver"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>