<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PauseMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#504C4C"
    android:orientation="horizontal"
    tools:context="com.example.neutrophil.menus.Pause">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/PauseTittle"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resume"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="320dp"
        android:layout_marginBottom="43dp"
        android:background="#D809E6"
        android:text="@string/resume"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settings"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="43dp"
        android:background="#8BC34A"
        android:text="@string/SettingsTittle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resume"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>