<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7A5230"
    android:orientation="horizontal"
    tools:context="com.example.neutrophil.game.Battle">

    <Button
        android:id="@+id/retreatButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="20dp"
        android:text="@string/retreat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/atkInfo"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/atkInfo"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="20dp"
        android:text="@string/attacks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/information"
        app:layout_constraintStart_toEndOf="@+id/retreatButton" />

    <TextView
        android:id="@+id/enemyName"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/enemyHealth"
        app:layout_constraintEnd_toStartOf="@+id/atkInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Enemy Type" />

    <ProgressBar
        android:id="@+id/enemyHealth"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="50dp"
        android:max="100"
        android:progress="100"
        android:progressTint="#C21807"
        android:scaleY="4"
        app:layout_constraintBottom_toTopOf="@+id/playerName"
        app:layout_constraintEnd_toStartOf="@+id/atkInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enemyName" />

    <TextView
        android:id="@+id/enemyHealthValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/enemyHealth"
        app:layout_constraintEnd_toEndOf="@+id/enemyHealth"
        app:layout_constraintStart_toStartOf="@+id/enemyHealth"
        app:layout_constraintTop_toTopOf="@+id/enemyHealth"
        tools:text="100/100" />

    <TextView
        android:id="@+id/playerName"
        android:layout_width="125sp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/neutrophil"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/playerHealth"
        app:layout_constraintEnd_toStartOf="@+id/atkInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enemyHealth" />

    <ProgressBar
        android:id="@+id/playerHealth"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:max="100"
        android:progress="100"
        android:progressTint="#C21807"
        android:scaleY="4"
        app:layout_constraintBottom_toTopOf="@+id/retreatButton"
        app:layout_constraintEnd_toStartOf="@+id/atkInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerName" />

    <TextView
        android:id="@+id/playerHealthValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/playerHealth"
        app:layout_constraintEnd_toEndOf="@+id/playerHealth"
        app:layout_constraintStart_toStartOf="@+id/playerHealth"
        app:layout_constraintTop_toTopOf="@+id/playerHealth"
        tools:text="100/100" />

    <android.gesture.GestureOverlayView
        android:id="@+id/atkInput"
        android:layout_width="500dp"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="#C6C6C6"
        app:layout_constraintBottom_toTopOf="@+id/information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playerName"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/playerImage"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/playerImage"
                android:src="@drawable/player"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enemyImage"
                tools:layout_conversion_absoluteHeight="63dp"
                tools:layout_conversion_absoluteWidth="63dp" />

            <ImageView
                android:id="@+id/enemyImage"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="80dp"
                android:contentDescription="@string/enemyImage"
                android:src="@drawable/red_bean"
                app:layout_constraintBottom_toTopOf="@+id/playerImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="64dp"
                tools:layout_conversion_absoluteWidth="62dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </android.gesture.GestureOverlayView>

    <TextView
        android:id="@+id/information"
        android:layout_width="450dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/atkInfo"
        app:layout_constraintTop_toBottomOf="@+id/atkInput"
        tools:text="Example text to give the player information and instructions" />

</androidx.constraintlayout.widget.ConstraintLayout>

